Set default sorting of plans to newest

--- a/src/pages/search/SearchResult.css
+++ b/src/pages/search/SearchResult.css
@@ -9,8 +9,8 @@
 }
 
 .plan-details {
-  margin-right: 0;
-  margin-left: 0;
+  margin-right: 0 !important;
+  margin-left: 0 !important;
   margin-top: 0.4rem;
 }
 
