Style plans page

--- a/src/assets/base.scss
+++ b/src/assets/base.scss
@@ -86,3 +86,9 @@
 // Icons
 @import "components/icons/linearicons";
 @import "components/icons/p7icons";
+
+// Profile
+@import "profile";
+
+// Plans
+@import "plans";
