--- a/src/assets/plans.scss
+++ b/src/assets/plans.scss
@@ -1,40 +1,38 @@
-.planscontainer {
-    position: relative;
-    width: 100%;
-    background: black;
-  }
-  
-  .plansimage {
-    display: block;
-    width: 100%;
-    height: auto;
-  }
-  
-  .plansoverlay {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    height: 100%;
-    width: 100%;
-    opacity: 0;
-    transition: .5s ease;
-    background-color: #008CBA;
-  }
-  
-  .planscontainer:hover .overlay {
-    opacity: 1;
-  }
-  
-  .planstext {
-    color: white;
-    font-size: 20px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    -webkit-transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-    text-align: center;
-  }
+.plans_container {
+  position: relative;
+  width: 100%;
+  height: 15vh;
+}
+
+.plans_overlay {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 100%;
+  width: 100%;
+  opacity: 0.5;
+  transition: .5s ease;
+  background-color: grey;
+}
+
+.plans_container:hover .plans_overlay {
+  opacity: 0.7;
+}
+
+.plans_text {
+  color: white;
+  font-size: 72px;
+  position: absolute;
+  top: 45%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
+
+* {
+  text-decoration: none;
+}
