--- a/src/assets/profile.scss
+++ b/src/assets/profile.scss
@@ -1,17 +1,18 @@
-.container {
+.profilecontainer {
     position: relative;
     width: 250px;
     padding: 0px;
+    margin: auto;
   }
   
-  .image {
+  .profileimage {
     display: block;
     width: 100%;
     height: 100%;
     border-radius: 100%;
   }
   
-  .overlay {
+  .profileoverlay {
     position: absolute;
     top: 0;
     bottom: 0;
@@ -25,13 +26,13 @@
     border-radius: 125px;
   }
   
-  .container:hover .overlay {
+  .profilecontainer:hover .profileoverlay {
     opacity: 0.7;
     height: 100%;
     width: 100%;
   }
   
-  .text {
+  .profiletext {
     color: white;
     font-size: 144px;
     position: absolute;
